--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,5 @@
 <resources>
-    <string name="app_name">丝网+</string>
-    <string name="app_name2">丝网测试</string>
+    <string name="app_name">丝网测试版</string>
 
     <string name="pull_to_load_pull_label">向上滑动加载更多…</string>
     <string name="pull_to_load_release_label">加载更多…</string>
